# sukeya.github.io

./: .gitignore  .gitmodules  404.html  Gemfile  README.md  _config.yml  about.md  index.html  index.md  mkdocs.yml  requirements.txt  search.html  sitemap.xml  zensical.toml
.github/workflows/: deploy.yml  requirements.txt
_data/: navigation.yml
_includes/: head.html  header.html  navigation.html
_layouts/: base.html  default.html  home.html  post.html
_posts/: 2022-06-09-are-sin-and-cos-unnecessary.md  2023-02-28-how-to-use-alembic.md  2023-03-09-what-is-geometry-scope.md  2023-03-13-tips-of-petsc.md  2023-03-25-how-to-use-thrust.md  2023-09-30-how-to-config-apple-magic-keyboard.md  2023-10-02-tips-posted-at-x.md  2023-10-03-where-is-thrust-device-event-impl.md  2023-10-20-how-to-write-particle-to-alembic.md  2023-12-03-Thrust-async.md  2023-3-9-what-is-geometry-scope.md
_sass/minima/: _layout.scss  custom-styles.scss
articles/cannot-change-perf-event-paranoid/: index.html
articles/config-apple-magic-keyboard-in-ubuntu/: index.html
articles/eigen_with_asan/: index.html
articles/expression_templates/: index.html
articles/gdb-get-stacktrace/: index.html
articles/how-to-use-alembic/: index.html
articles/how_to_use_hip/: index.html
assets/: minima-social-icons.liquid
docs/: index.md
julia_manual/: variable.md
search/: search_index.json
src/how_to_use_onetbb/: CMakeLists.txt  paralel_for_each.cpp  parallel_for.cpp  parallel_for_each.cpp  parallel_for_each_with_feeder.cpp  parallel_pipeline.cpp  parallel_reduce.cpp  parallel_reduce_rvalue.cpp
(+36 files in other folders)
